どゆめんと関連再度アプデ

--- a/Doc/latex/index.tex
+++ b/Doc/latex/index.tex
@@ -2,7 +2,13 @@
 \hypertarget{index}{}\label{index}\index{PotatoLib ポータル@{PotatoLib ポータル}}
 \label{index_mainpage}%
 \Hypertarget{index_mainpage}%
- \hypertarget{index_autotoc_md0}{}\doxysection{\texorpdfstring{フォルダ構成 概要}{フォルダ構成 概要}}\label{index_autotoc_md0}
+   
+\begin{DoxyInlineImage}
+\includegraphics[height=\baselineskip,keepaspectratio=true]{ptt.png}
+\end{DoxyInlineImage}
+   
+
+\hypertarget{index_autotoc_md0}{}\doxysection{\texorpdfstring{フォルダ構成 概要}{フォルダ構成 概要}}\label{index_autotoc_md0}
 \hypertarget{index_autotoc_md1}{}\doxysubsection{\texorpdfstring{Doc}{Doc}}\label{index_autotoc_md1}
 Doxygen生成のドキュメント
 
